fix(client-sdk): remove leftover @Component + fix FailoverStrategy race
- RoutingStrategyFactory: remove @Component (registered via @Bean instead)
- FailoverStrategy: mark activeBaseUrl volatile + synchronized select()
  to prevent lost updates when multiple threads pick nodes concurrently

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>